try to fix sub-pixel alignment

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -112,7 +112,7 @@ body {
 
       position: absolute;
       left: -10px;
-      top: 1px;
+      top: 0.4px;
 
       font-size: 7px;
 
