--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -10,6 +10,6 @@
    span {
       position: absolute;
       left: 0px;
-      top: 0px;
+      top: -0.5px;
    }
 }
